platform/infrastructure/controllers/cert-manager/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-baseline
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
  - toEntities: [kube-apiserver, host, cluster]
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        kubernetes.io/metadata.name: kube-system
    toPorts:
    - ports: [{port: "53", protocol: ANY}]
